--- a/style.css
+++ b/style.css
@@ -12,6 +12,16 @@ header {
     text-align: center;
 }
 
+h2 {
+    text-align: center;
+    color: red;
+}
+
+h5 {
+    font-size: 1.2rem;
+    color: rgb(0, 0, 0);
+}
+
 #saudacao {
     font-size: 1.2rem;
     margin-top: 0.5rem;
